--- a/case_temps/requirements.txt
+++ b/case_temps/requirements.txt
@@ -4,7 +4,7 @@ async-timeout==4.0.3
 asyncclick==8.1.3.4
 logger==1.4
 paho-mqtt==1.6.1
-requests==2.32.0
+requests>=2.32.4
 uuid==1.30
 RPi.GPIO
 adafruit-circuitpython-dht
